[tool.poetry]
name = "findmyprovider"
version = "0.1.0"
description = ""
authors = ["Ibrahim <brahim.oued@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.78.0"
SQLAlchemy = "^1.4.36"
gunicorn = "^20.1.0"
requests = "^2.27.1"
python-dotenv = "^0.20.0"
pytest = "^7.1.2"
pydantic = "^1.9.0"
uvicorn = "^0.17.6"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
